--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Particle_Simulator)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Particle_Simulator source/main.cpp)
+add_executable(Particle_Simulator source/main.cpp source/Body.cpp headers/Body.h headers/CircleBody.h source/CircleBody.cpp)
 
 set(SFML_ROOT "C:/Libraries/SFML-2.4.2-MinGw")
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
