--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@ CMakeFiles
 Makefile
 cmake_install.cmake
 CMakeCache.txt
+build/
 .vscode
-PhysicsSim
+phys
 compile_commands.json
 .ccls-cache/
 .idea/
+.clangd/
