--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,36 @@
 cmake_minimum_required(VERSION 3.12)
 
-project(PhysicsSim)
-
-set(CMAKE_CXX_STANDARD 17)
+project("Particle Sim")
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+file(GLOB_RECURSE PHYS_SRC src/*.cpp src/*.hpp) 
+add_executable(phys ${PHYS_SRC})
+
+target_compile_options(phys
+    PUBLIC -std=c++17
+)
+
+target_include_directories(phys
+    PRIVATE ecs/
+)
+
+file(GLOB_RECURSE ECS_SRC ecs/*.cpp)
+add_library(ECS
+    ${ECS_SRC}
+)
+
+target_compile_options(ECS
+    PUBLIC -std=c++17
+)
 
 find_package(SFML 2.5 COMPONENTS graphics REQUIRED)
+
 set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
 set(THREADS_PREFER_PTHREAD_FLAG TRUE)
 find_package(Threads REQUIRED)
 
-set(SRC)
-file(GLOB_RECURSE SRC "src/*.cpp" "src/*.hpp" "src/*.c" "src/*.h")
-
-add_executable(PhysicsSim ${SRC})
-target_link_libraries(PhysicsSim sfml-graphics)
-target_link_libraries(PhysicsSim Threads::Threads)
+target_link_libraries(phys 
+    sfml-graphics 
+    Threads::Threads 
+    ECS
+)
